# CNS

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.cursor/rules/: git-commit-push.mdc
.github/workflows/: download.yml  release-tauri.yml
scripts/: verify-dist.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ArchivePanel.tsx  AsciiLogo.tsx  DiagnosticsPanel.tsx  ErrorBoundary.tsx  InputNode.tsx  MatrixRain.tsx  PartsModal.tsx  SettingsModal.tsx  SignalFeed.tsx
src/lib/: errors.ts  github.ts  i18n.ts  logger.ts  splitParts.ts  useArchive.ts  userToast.ts
