[package]
name = "cns"
version = "1.2.2"
description = "Desktop shell for CNS"
authors = ["CNS Contributors"]
license = "MIT"
repository = ""
default-run = "cns"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [] }
keyring = "2.3.3"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
urlencoding = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
